# https-github.com-samimjafari-phoenix-app

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  auto_dev_agent.py  build_faiss_termux.sh  cli.py  dev-compose.yaml  gui.py  gui_flet.py  main.py  package.json  pyproject.toml  requirements.txt  setup_termux.sh  termux_vector_store.py
.github/workflows/: ai-analyzer.yml  build-desktop-app.yml  deploy-gui.yml
ai_assistant/: __init__.py  github.py  memory.py  models.py  search.py  utils.py
ai_library/: core.py
alpha-ai/: main.py  sample.py
alpha-gui/: index.html  style.css
apps/desktop/: app.py
letta_src/: CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  conf.yaml  pyproject.toml
letta_src/alembic/versions/: 038e68cdf0df_add_cascades_to_blocks_agents_fks_set_.py  18ff61fbc034_add_agent_id_index_to_mapping_tables.py  27de0f58e076_add_conversations_tables_and_run_.py  297e8217e952_nullable_embedding_for_archives_and_.py  308a180244fc_last_synced_column_for_providers.py  39577145c45d_add_project_constraint_on_tools.py  (+20 more)
letta_src/fern/: openapi.json
letta_src/letta/: __init__.py  config_file.py  constants.py  errors.py  interface.py  main.py  settings.py  streaming_interface.py  system.py  test_gemini.py  utils.py  validators.py
letta_src/sandbox/: modal_executor.py
letta_src/tests/: conftest.py  integration_test_agent_tool_graph.py  integration_test_async_tool_sandbox.py  integration_test_batch_api_cron_jobs.py  integration_test_builtin_tools.py  integration_test_cancellation.py  integration_test_chat_completions.py  integration_test_clickhouse_llm_traces.py  integration_test_client_side_tools.py  integration_test_conversations_sdk.py  integration_test_human_in_the_loop.py  integration_test_mcp.py  integration_test_modal.py  integration_test_multi_agent.py  integration_test_multi_modal_tool_returns.py  integration_test_override_model.py  integration_test_send_message.py  integration_test_send_message_v2.py  integration_test_sleeptime_agent.py  integration_test_summarizer.py  integration_test_system_prompt_prefix_caching.py  integration_test_token_counters.py  integration_test_tool_execution_sandbox.py  integration_test_turbopuffer.py  integration_test_typescript_tool_execution_sandbox.py  integration_test_usage_tracking.py  manual_test_many_messages.py  manual_test_multi_agent_broadcast_large.py  mock_mcp_server.py  test_agent_serialization.py  test_agent_serialization_v2.py  test_client.py  test_context_window_calculator.py  test_crypto_utils.py  test_embedding_optional.py  test_exception_logging.py  test_google_embeddings.py  test_google_schema_refs.py  test_internal_agents_count.py  test_letta_agent_batch.py  (+27 more)
scripts/: install-tools-kali.sh  install-tools-linux.sh
(+402 files in other folders)
