[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "glowing-guacamole"
version = "0.1.0"
description = "A powerful, offline-first AI assistant with semantic memory, web search, and GitHub integration."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests",
    "llama-cpp-python",
    "googlesearch-python",
    "cryptography",
    "sentence-transformers",
    "numpy",
    "rich",
    "flet",
    "PyGithub",
    "beautifulsoup4",
    # Additional Letta (MemGPT) dependencies
    "typer>=0.12.0",
    "questionary>=2.0.1",
    "pytz>=2023.3.post1",
    "tqdm>=4.66.1",
    "black[jupyter]>=24.2.0",
    "setuptools>=70",
    "prettytable>=3.9.0",
    "docstring-parser>=0.16,<0.17",
    "httpx>=0.27.0",
    "demjson3>=3.0.6",
    "pyyaml>=6.0.1",
    "sqlalchemy-json>=0.7.0",
    "pydantic>=2.9.2",
    "html2text>=2020.1.16",
    "sqlalchemy[asyncio]>=2.0.35",
    "python-box>=7.1.1",
    "sqlmodel>=0.0.16",
    "python-multipart>=0.0.12",
    "sqlalchemy-utils>=0.41.2",
    "pydantic-settings>=2.2.1",
    "httpx-sse>=0.4.0",
    "nltk>=3.8.1",
    "alembic>=1.13.3",
    "pyhumps>=3.8.0",
    "pathvalidate>=3.2.1",
    "sentry-sdk[fastapi]==2.14.0",
    "brotli>=1.1.0",
    "grpcio>=1.66.1",
    "grpcio-tools>=1.66.1",
    "llama-index>=0.11.16",
    "llama-index-embeddings-openai>=0.2.5",
    "anthropic>=0.34.2",
    "letta-client>=0.1.1",
    "openai>=1.46.0",
    "opentelemetry-api==1.27.0",
    "opentelemetry-sdk==1.27.0",
    "opentelemetry-instrumentation-requests==0.48b0",
    "opentelemetry-instrumentation-sqlalchemy==0.48b0",
    "opentelemetry-exporter-otlp==1.27.0",
    "faker>=28.4.1",
    "colorama>=0.4.6",
    "marshmallow-sqlalchemy>=1.0.0",
    "datamodel-code-generator[http]>=0.25.0",
    "mcp[cli]>=1.0.0"
]

[tool.setuptools.package-dir]
"" = "."
"letta" = "letta_src/letta"

[project.scripts]
glowing-guacamole = "cli:main"
glowing-guacamole-gui = "gui_flet:main"
letta = "letta.main:app"
